--- a/frontEnd/css/login.css
+++ b/frontEnd/css/login.css
@@ -78,3 +78,24 @@ span.psw {
     width:50%;
     padding:11px 15px;
 }
+.phones {
+  list-style: none;
+}
+
+.phones li {
+  clear: both;
+  height: 115px;
+  padding-top: 15px;
+}
+
+.thumb {
+  float: left;
+  height: 100px;
+  margin: -0.5em 1em 1.5em 0;
+  padding-bottom: 1em;
+  width: 100px;
+}
+
+.product ul{
+list-style-type: none;
+}
