--- a/frontEnd/views/login-form.html
+++ b/frontEnd/views/login-form.html
@@ -17,7 +17,7 @@
                     </div>
                     <div class="container" style="background-color:#f1f1f1">
                         <button type="button" ng-click="loginCtrl.cancel()" class="cancelbtn">Cancel</button>
-                       <a href=#"/signup"><button type="button" class=" cancelbtn signUp">signup</button></a> 
+                       <a href="#/signup"><button type="button" class=" cancelbtn signUp">signup</button></a> 
                         <span class="psw">Forgot <a href="#">password?</a></span>
                     </div>
                    
