--- a/frontEnd/views/products-view.html
+++ b/frontEnd/views/products-view.html
@@ -1,9 +1,58 @@
-<ul class="products">
-  <li ng-repeat="products in prod.products | filter:productCtrl.query | orderBy:productCtrl.orderProp" class="thumbnail">
-    <a href="#/products/{{productCtrl.id}}" class="thumb">
-      <img ng-src="{{productCtrl.imageUrl}}" alt="{{productCtrl.name}}" />
-    </a>
-    <a href="#/products/{{products.id}}">{{products.name}}</a>
-    <p>{{products.snippet}}</p>
-  </li>
-</ul>
+<div class="upload-product container">
+    <button type="button" class="btn btn-success" data-toggle="modal" data-target=".bs-example-modal-lg">upload product</button>
+    <div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <form role="form">
+                    <div class="form-group">
+                        <label for="category"><span class="glyphicon glyphicon-cog"></span> category</label>
+                        <input type="text" class="form-control" ng-model="productCtrl.category" id="category" placeholder="Enter category">
+                    </div>
+                    <div class="form-group">
+                        <label for="description"><span class="glyphicon glyphicon-edit"></span> description</label>
+                        <input type="text" class="form-control" ng-model="productCtrl.description" id="description" placeholder="Enter description">
+                    </div>
+                    <div class="form-group">
+                        <label for="image upload"><span class="glyphicon glyphicon-phone"></span> upload product image</label>
+                        <input type="file" class="form-control" ng-model="productCtrl.images.path" id="file" placeholder="upload img">
+                    </div>
+                    <div class="form-group">
+                        <label for="product name"><span class="glyphicon glyphicon-phone"></span>product name</label>
+                        <input type="text" class="form-control" ng-model="productCtrl.images.orignalname" id="productName" placeholder="Enter name of product">
+                    </div>
+                    <div class="form-group">
+                        <label for="cost"><span class="glyphicon glyphicon-usd"></span> cost</label>
+                        <input type="number" class="form-control" ng-model="productCtrl.cost" id="cost" placeholder="Enter cost">
+                    </div>
+                    <button ng-click="productCtrl.productUploader()" class="btn btn-success btn-block"><span class="glyphicon glyphicon-save"></span> </button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+ <ul class="products">
+    <li class="thumbnail">
+        <a href class="thumb">
+            <img alt>
+        </a>
+        <a href>{{}}</a>
+        <p>{{}}</p>
+    </li>
+    </ul>
+    <!-- <form role="form">
+                    <div class="form-group">
+                        <label for="category"><span class="glyphicon glyphicon-user"></span> category</label>
+                        <input type="text" class="form-control" id="category" placeholder="Enter category">
+                    </div>
+                    <div class="form-group">
+                        <label for="description"><span class="glyphicon glyphicon-eye-open"></span> description</label>
+                        <input type="text" class="form-control" id="description" placeholder="Enter description">
+                    </div>
+                    <div class="form-group">
+                        <label for="description"><span class="glyphicon glyphicon-eye-open"></span> description</label>
+                        <input type="text" class="form-control" id="description" placeholder="Enter description">
+                    </div>
+                   
+                   
+                    <button type="submit" class="btn btn-success btn-block"><span class="glyphicon glyphicon-off"></span> </button>
+                </form> -->
