--- a/frontEnd/views/products-view.html
+++ b/frontEnd/views/products-view.html
@@ -17,7 +17,7 @@
                     </div>
                     <div class="form-group">
                         <label for="description"><span class="glyphicon glyphicon-edit"></span> description</label>
-                        <input type="text" class="form-control" ng-model="productCtrl.description" id="description" placeholder="Enter description">
+                        <input type="text" class="form-control" height="20" widht="30" ng-model="productCtrl.description" id="description" placeholder="Enter description">
                     </div>
                     <div class="form-group">
                         <label for="image upload"><span class="glyphicon glyphicon-phone"></span> upload product image</label>
@@ -45,7 +45,7 @@
                     <div class="col-xs-3 col-md-3 product-img"><img src="data:image/png;base64,{{product.img64}}">
                     </div>
                     <div class="col-xs-4 col-md-5 product-name text-center">{{product.orignalname}}</div>
-                    <div class="col-xs-3 col-md-3 product-rating">Rating {{product.rating}}/10</div>
+                    <div class="col-xs-3 col-md-3 product-rating">Rating {{product.rating}}/5</div>
                 </div>
             </div>
         </a>
